--- a/_posts/other/2022-09-08-annualreview2022.md
+++ b/_posts/other/2022-09-08-annualreview2022.md
@@ -39,17 +39,14 @@ While lock down presented some challenges. There were opportunities to dissemina
 
 This early dissemination of results prompted an deeper analysis of my existing data in terms of the overarching themes. I wanted to present the themes in an accessible way which suited the dissemination of findings to audiences of academics and educators in both formal and informal domains. The a pedagogical model which I called the 3M Game Making Model emerged from this process.
 
-
-
 ### Writing Book Chapters
 
-I have written three book chapters recently (pre-publisher versions available at  )
+I have completed three book chapters this year (pre-publisher versions available at https://mickfuzz.github.io/phd4/book_chapters.html).  
 
-The process of writing for and audience of teachers was productive in shaking up my thinking on Computational Thinking and conceptions of abstract concepts and more grounded concrete practices in the fields of computing education, project and inclusive contexts.
+Two were for an audience of teachers. One on abstract and concrete approaches to computing education and another on design and project approaches. The process of writing them
+was productive in shaking up my thinking on Computational Thinking and conceptions of abstract concepts and more grounded concrete practices in the fields of computing education, project and inclusive contexts.
 
-### Results in the 3M Framework as a book chapter.
-
-The 3M model was the basis for a book chapter with a mixed audience of academics and
+Another book chapter for a collection on teaching coding focused directly on game making and outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
 
 ## Data Gathering - Additional Material and Summary
 
