updating annual report

--- a/_posts/other/2022-09-08-annualreview2022.md
+++ b/_posts/other/2022-09-08-annualreview2022.md
@@ -13,31 +13,45 @@ The primary aims of this review document is give to a short update on research a
 
 ## Review of Context of Research
 
-The potential of digital game making is explored in depth in a review by Kafai and Burke [-@kafai_constructionist_2015]. The most prominent learning objective of making games in educational setting is to develop _coding and computing skills_. While there has been a large body of research on the value and practice of game making for educational purposes, it is a dynamic landscape which has many areas which merit additional research. New software tools which make games offering new pedagogical possibilities emerge regularly. Game playing practices and the opportunities provided by participation in wider communities also continue to evolve. For example, casual and retro games played by both adults and children are increasingly available via smart phones and home consoles. The nostalgia around such games and the associated aesthetics of cuteness creates a potential for connection between younger and older players [@boyle_retro-futurism_2017]. The sustained popularity of retro games together with easy-to-use game making tools and code frameworks provides an entry point for game players into game making cultures which is reflected in the success of amateur games publishing websites like itch.io [@garda_nostalgia_2014]. My study, in part, asks how the motivational and navigational affordances of enthusiast game making communities can be brought into more structured educational environments.   
-
-In the context of UK computing education, the report "Next Gen: Transforming the UK into the world’s leading talent hub for the video games and visual effects industries" [@livingstone_next_2011] contained the recommendations to include computer science in core curriculum, introduce a new Computing GCSE exam (a general exam for 16 year olds before they progress to more specialised study), offer bursaries for computing teachers and to implement well-supported use of games and visual animation in the school curriculum as a way to attract more young people to the subject. The After the Reboot report [@waite_pedagogy_2017] returned to the subject of game making as a way of increasing engagement in the process of coding. The review highlighted several areas of promise which needed more research: using games for engagement, use of design patterns (a term explored later in this chapter) and the involvement of girls in coding and social and cultural aspects of coding.
+While there has been a large body of research on the value and practice of game making for educational purposes, it is a dynamic landscape which has many areas which merit additional research [-@kafai_constructionist_2015]. New software tools which make games offering new pedagogical possibilities emerge regularly. Game playing practices and the opportunities provided by participation in wider communities also continue to evolve. For example, casual and retro games played by both adults and children are increasingly available via smart phones and home consoles. The nostalgia around such games and the associated aesthetics of cuteness creates a potential for connection between younger and older players [@boyle_retro-futurism_2017]. My study, in part, asks how the motivational and navigational affordances of enthusiast game making communities can be brought into more structured educational environments.  
 
 ## Summary of Activity since RD2
 
 My RD2 was in December 2019. I was suspended from studies in Summer 2020 and restarted earlier this summer in June 2022. This section is a brief summary of some of the activities that I have managed to undertake in this timeframe.
 
-### Creation of materials for Make Code and Glitch.com
-
-The process of running more courses in the  
-Based on cards for DPs, and additional challenges, and fictional design.
-
-
-## Early Dissemination of Results via Presentations
+### Early Dissemination of Results via Presentations
 
 While lock down presented some challenges. There were opportunities to disseminate early results.
 
 - Online Mozilla Conference 2021: Mozilla were pioneers of in informal digital learning and associated tools [@sefton-green_mapping_2013]. I presented an overview of the key salient features of the 3M model during an online conference to replace the in-person event. The interactive presentation was well received.
 
--  Online Presentation at Manchester Games Network: In this 90 minute presenation and interactive session I was supported by Sam and Paul to share early results. This was a challenging but helpful exercise. I was struck by the grounded nature of this research.
+-  Online Presentation at Manchester Games Network: In this 90 minute presentation and interactive session I was supported by Sam and Paul to share early results. This was a challenging but helpful exercise. I was struck by the grounded nature of this research.
 
 - Informal Participation on Playful Learning conference 2022: The use of games consoles loaded with games created by participants is an engaging way to talk about my research.
 
-This early dissemination of results prompted an deeper analysis of my existing data in terms of the overarching themes. I wanted to present the themes in an accessible way which suited the dissemination of findings to audiences of academics and educators in both formal and informal domains. The a pedagogical model which I called the 3M Game Making Model emerged from this process.
+This early dissemination of results prompted an deeper analysis of my existing data in terms of the overarching themes. I wanted to present the themes in an accessible way which suited the dissemination of findings to audiences of academics and educators in both formal and informal domains. The a pedagogical model which I called the 3M Game Making Model emerged from this process. As this has become a key output of my research I will outline the model briefly before continuing this report.
+
+BOX BEGINS
+
+### Summary of 3M Game Making Model
+
+The key features of the 3M Game Making Model are outlined below. The implementation of game design patterns as missions by learners as a core unit of activity. Maps are used by both learners and facilitators as reflective and navigational tools. Finally methods are used by primarily by facilitators in planning session activities.
+
+![Figure 1.3. Synthesising diagram of 3M Game Making Model](../Pictures/3msynthesis.png){ width=80% }
+
+
+| **Missions**         | **Maps**             | **Methods**          |
+|----------------|-----------|------------|
+| Simple code changes yield quick feedback  | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators       | Play Testing in each session aids short term motivation.  Showcase events help longer-term motivation and aid project prioritisation   |
+| Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role          |
+| Restrict Game Type and number of Patterns to reduce Facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
+| Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
+| Side missions which explore and celebrate different ‘maker types’ (from  Bartle’s player types)          |        |     |
+
+Table 1.2.  Key Features of 3M Game Making Model
+
+BOX ENDS
+
 
 ### Writing Book Chapters
 
@@ -48,24 +62,50 @@ was productive in shaking up my thinking on Computational Thinking and conceptio
 
 Another book chapter for a collection on teaching coding focused directly on game making and outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
 
-## Data Gathering - Additional Material and Summary
+### Creation of Resources for Learners & Educators
+
+To support the process of facilitating more courses to gather more data
+
+At RD2 stage I explained that a new software tool had been launched with allowed
+
+
+
+**Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework. While other programming environments can be used, these resources are based on learners using the glitch.com code playground website.
+
+* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities - https://glitch-game-makers-manual.glitch.me/
+* An interactive starting template and grid of game design patterns that learners can add to the incomplete template - https://ggc-examples.glitch.me/
+
+**3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities. All of these resources are available at https://mickfuzz.github.io/makecode-platformer-101
+
+
+
+### Data Gathering - Additional Material and Summary
 
 In early 2020 I rad two additional courses on game making. The first involved a similar level of video data capture and participants to earlier courses with 360, the second was more restricted due to the rooms that were available. Limited screen capture data was recorded.
 
+A TABLE OF STAGES OF DATA GATHERING FOLLOWS - AS IMAGE
+
 ## Data Analysis
 
-The process of data analysis is underway. Before starting a detailed analysis of the data I was unsure if sufficient relevant data had gathered or if more needed to be undertaken.
+Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions.  
+
+The process of of a more systematic triangulation of that data with video data analysis is underway.
+
+Before starting a detailed analysis of the data I was unsure if sufficient relevant data had gathered or if more needed to be undertaken.
 
 In the RD2 a vignette was selected as an exemplar of material gathered. The data from 360 camera allowed clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions.
 
-This study presented significant challenges in regards to analysis of data, some forseen and some unexpected.
+This study presented significant challenges in regards to analysis of data, some foreseen and some unexpected.
 
 - The challenge of the length of time required to analyse data.  
 - The process of collating and contrasting data from significantly after the date is challenging.
+- The breadth of possible streams of study made deeper coding and analysis difficult
 
 Shortly after starting a deeper analysis of data an coding material it became apparent that the initial sessions of data gathering in the first half of 2019 were by far the richest in interaction and community activity.
 
-Thus while additional data gathering was useful in terms of notes gathered and development of material, it will not be analyised in the depth of hte first iteration and may be the basis of future analysis in follow up papers.
+It was social and community aspects that also stood out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range.
+
+Thus while additional data gathering was useful in terms of notes gathered and development of material, it will not be analysed in the depth of the first iteration and may be the basis of future analysis in follow up papers.
 
 ## Iterative Project Design Revision
 
@@ -74,7 +114,6 @@ The foundation of this research is a design-based research approach which is und
 Especially so when trying to write for a wider audience as in the teacher training
 
 The underlying ideas of activity as a base for analysis gives a much wider scope for interpretation. I was drawn to  Rogoff's three planes / foci  as an analytical tool.
-
 
 Alternating between concrete and abstract - CT as a source of debate for this area - deepening my understanding and practitioner focus.
 
@@ -87,7 +126,7 @@ Emerging Focus on Design Patterns
 
 #### Nvivo coding
 
-when coding I started with some preset codes from the literature for examples Barron's codes on parent roles when helping digital projects. However, as coding progressed, I modified and extended these codes to better match the data I was working with.
+when coding I started with some preset codes from the literature for examples Barron's codes on parent roles when helping digital projects. However, as coding progressed, I modified and extended these codes to better match the data I was working with. The coding structure is included as an appendix.
 
 ### Explore how to present Missions part of 3M framework as chapter.
 
@@ -97,8 +136,14 @@ This involves developing a stream of activity which is treated in whole. While s
 
 Part of this early writing up process is to revise research questions. To so this I've used a Kanban software allowing rapid revision and repositioning of questions and concepts. [What is a KanBan approach. ]
 
-The link of project-based learning to my own teaching at university and the focus on inclusive practices of recent writings steered me to include these broad terms into a revision of research questions. However, as coding began, the need to bring more focus to the questions became apparent.
+The link of project-based learning to my own teaching at university and the focus on inclusive practices of recent writings steered me to include these broad terms into a revision of research questions. However, as coding began, the need to bring more focus to the questions became apparent. While the exact wording of the questions is as yes unfixed, the following areas will be covered to allow the exploration of some of the most interesting areas emerging from my analysis of the collected data.
 
+- RQ1 - What game making pedagogies exist?
+- RQ2 - How can educators support the development of a community of game makers?
+- RQ3 - How do game patterns support the development of coding practices with novices?
+- RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
+
+An ongoing question
 
 ## Appendices
 
