work on the annual review

--- a/_posts/other/2022-09-08-annualreview2022.md
+++ b/_posts/other/2022-09-08-annualreview2022.md
@@ -66,8 +66,7 @@ Another book chapter for a collection on teaching coding focused directly on gam
 
 To support the process of facilitating more courses to gather more data
 
-At RD2 stage I explained that a new software tool had been launched with allowed
-
+At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade with allowed the use of common game design framework patterns within a block-coding tool.
 
 
 **Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework. While other programming environments can be used, these resources are based on learners using the glitch.com code playground website.
@@ -83,15 +82,16 @@ At RD2 stage I explained that a new software tool had been launched with allowed
 
 In early 2020 I rad two additional courses on game making. The first involved a similar level of video data capture and participants to earlier courses with 360, the second was more restricted due to the rooms that were available. Limited screen capture data was recorded.
 
-A TABLE OF STAGES OF DATA GATHERING FOLLOWS - AS IMAGE
+A TABLE OF STAGES OF DATA GATHERING FOLLOWS - AS IMAGE / Linked in Appendix
+https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#
 
 ## Data Analysis
 
 Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions.  
 
-The process of of a more systematic triangulation of that data with video data analysis is underway.
+The process of of a more systematic triangulation of that data with video data analysis is underway. Before starting this detailed analysis of the data I was unsure if sufficient relevant data had gathered or if more needed to be undertaken. However the material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. Thus rather than gathering more data, I am looking at restricting detailed analysis of data to that  gathered in 2019 as it quickly became apparent that the initial sessions of data gathering in the first half of 2019 were by far the richest terms of this social and community activity.
 
-Before starting a detailed analysis of the data I was unsure if sufficient relevant data had gathered or if more needed to be undertaken.
+These was social and community aspects stand  out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range.
 
 In the RD2 a vignette was selected as an exemplar of material gathered. The data from 360 camera allowed clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions.
 
@@ -100,10 +100,6 @@ This study presented significant challenges in regards to analysis of data, some
 - The challenge of the length of time required to analyse data.  
 - The process of collating and contrasting data from significantly after the date is challenging.
 - The breadth of possible streams of study made deeper coding and analysis difficult
-
-Shortly after starting a deeper analysis of data an coding material it became apparent that the initial sessions of data gathering in the first half of 2019 were by far the richest in interaction and community activity.
-
-It was social and community aspects that also stood out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range.
 
 Thus while additional data gathering was useful in terms of notes gathered and development of material, it will not be analysed in the depth of the first iteration and may be the basis of future analysis in follow up papers.
 
