writing report annual and adding an image

--- a/_posts/other/2022-09-08-annualreview2022.md
+++ b/_posts/other/2022-09-08-annualreview2022.md
@@ -37,7 +37,7 @@ BOX BEGINS
 
 The key features of the 3M Game Making Model are outlined below. The implementation of game design patterns as missions by learners as a core unit of activity. Maps are used by both learners and facilitators as reflective and navigational tools. Finally methods are used by primarily by facilitators in planning session activities.
 
-![Figure 1.3. Synthesising diagram of 3M Game Making Model](../Pictures/3msynthesis.png){ width=80% }
+![Figure 1.1. Synthesising diagram of 3M Game Making Model](../Pictures/3msynthesis.png){ width=80% }
 
 
 | **Missions**         | **Maps**             | **Methods**          |
@@ -53,34 +53,29 @@ Table 1.2.  Key Features of 3M Game Making Model
 BOX ENDS
 
 
-### Writing Book Chapters
+### Book Chapters
 
 I have completed three book chapters this year (pre-publisher versions available at https://mickfuzz.github.io/phd4/book_chapters.html).  
 
 Two were for an audience of teachers. One on abstract and concrete approaches to computing education and another on design and project approaches. The process of writing them
-was productive in shaking up my thinking on Computational Thinking and conceptions of abstract concepts and more grounded concrete practices in the fields of computing education, project and inclusive contexts.
-
-Another book chapter for a collection on teaching coding focused directly on game making and outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
+was productive in shaking up my thinking on Computational Thinking and conceptions of abstract concepts and more grounded concrete practices in the fields of computing education, project and inclusive contexts. Another book chapter for a collection on teaching coding focused directly on game making and outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
 
 ### Creation of Resources for Learners & Educators
 
-To support the process of facilitating more courses to gather more data
+At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade (MCA) with allowed the use of common game design framework patterns within a block-coding tool. I adapted the resources created for the Glitch ssytem that I had already been using to work with MCA.
 
-At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade with allowed the use of common game design framework patterns within a block-coding tool.
+**Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework.
 
+* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^1].  
+* An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^2].
 
-**Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework. While other programming environments can be used, these resources are based on learners using the glitch.com code playground website.
-
-* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities - https://glitch-game-makers-manual.glitch.me/
-* An interactive starting template and grid of game design patterns that learners can add to the incomplete template - https://ggc-examples.glitch.me/
-
-**3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities. All of these resources are available at https://mickfuzz.github.io/makecode-platformer-101
-
-
+**3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities[^3].
 
 ### Data Gathering - Additional Material and Summary
 
 In early 2020 I rad two additional courses on game making. The first involved a similar level of video data capture and participants to earlier courses with 360, the second was more restricted due to the rooms that were available. Limited screen capture data was recorded.
+
+![Figure 1.2. Data Gathering Stages](../Pictures/data_stages.png){ width=96% }
 
 A TABLE OF STAGES OF DATA GATHERING FOLLOWS - AS IMAGE / Linked in Appendix
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#
@@ -103,43 +98,37 @@ This study presented significant challenges in regards to analysis of data, some
 
 Thus while additional data gathering was useful in terms of notes gathered and development of material, it will not be analysed in the depth of the first iteration and may be the basis of future analysis in follow up papers.
 
-## Iterative Project Design Revision
-
-The foundation of this research is a design-based research approach which is underlined by Activity Theory as a conceptual framework. While the analysis of results at RD2 stage was going to be based on Engeström's detailed framework of third generation Activity Theory, my attempts to write up emerging results within this framework did not gel. Possible reasons for this seeming mismatch include the disconnection of my learning environment from the workplace siting often assumed in that model when paired with the suggested methodology of formative interventions. The process of trying to map the different levels of activity happening in the formation and evolution of a community and the temptation to write something about each of the axes was overwhelming.
-
-Especially so when trying to write for a wider audience as in the teacher training
-
-The underlying ideas of activity as a base for analysis gives a much wider scope for interpretation. I was drawn to  Rogoff's three planes / foci  as an analytical tool.
-
-Alternating between concrete and abstract - CT as a source of debate for this area - deepening my understanding and practitioner focus.
-
-Emerging Focus on Design Patterns
-## Next Goal write up one chapter of results
-
-### Coding existing data
-
-#### Data processing
-
 #### Nvivo coding
 
 when coding I started with some preset codes from the literature for examples Barron's codes on parent roles when helping digital projects. However, as coding progressed, I modified and extended these codes to better match the data I was working with. The coding structure is included as an appendix.
 
-### Explore how to present Missions part of 3M framework as chapter.
+## Iterative Project Design Revision
 
-This involves developing a stream of activity which is treated in whole. While some writing about foundational aims and background context is included as a summary of the structure of the introduction and literature review of the intended thesis.
+The foundation of this research is a design-based research approach which is underlined by Activity Theory as a conceptual framework. While the analysis of results at RD2 stage was going to be based on Engeström's detailed framework of third generation Activity Theory, my attempts to write up emerging results within this extensive and prescriptive framework were cumbersome.
 
-#### Revision of Research questions
+<!-- Possible reasons for this seeming mismatch include the disconnection of my learning environment from the workplace siting often assumed in that model when paired with the suggested methodology of formative interventions. The process of trying to map the different levels of activity happening in the formation and evolution of a community and the temptation to write something about each of the axes was overwhelming. -->
 
-Part of this early writing up process is to revise research questions. To so this I've used a Kanban software allowing rapid revision and repositioning of questions and concepts. [What is a KanBan approach. ]
+Instead, I have been experimenting with writing up using CHAT as a conceptual framework suplemented with an different analysis tools to allow for wider interpretation. Specifically, I am using Rogoff's three planes / foci as an analytical tool.
 
-The link of project-based learning to my own teaching at university and the focus on inclusive practices of recent writings steered me to include these broad terms into a revision of research questions. However, as coding began, the need to bring more focus to the questions became apparent. While the exact wording of the questions is as yes unfixed, the following areas will be covered to allow the exploration of some of the most interesting areas emerging from my analysis of the collected data.
+Alternating between concrete and abstract - CT as a source of debate for this area - deepening my understanding and practitioner focus.
+
+Emerging Focus on Design Patterns
+
+## Next Goals
+
+I include a brief description of my next stages in this thesis.
+
+ - **Write up one chapter of results:** I am focusing on Design Patterns as the basis for one chapter of results.
+ - **Ongoing coding and analysis of video data:** I will continue to analyse video data in depth and search for key moments of interaction.
+ - **Exploration of emerging concepts in existing research:** As concepts and practices emerge as being particularly significant, I will focus on those elements in existing research and practice and compare and contrast my findings.
+- **Explore how to present 3M framework within results chapters:** While the 3M framework is suitable for dissemination in practice, there is still work to be done to frame it in relation to existing knowledge in the field. I am exploring mapping the three elements of the 3M model to the three foci; cultural, social and personal planes of Rogoff's model. I will be requesting help on this aspect of the process from my supervisors.
+- **Revision of Research questions: **As I began coding, the need to focus research questions became apparent. While the exact wording of the questions is as yes unfixed, the following questions are my current candidates.
 
 - RQ1 - What game making pedagogies exist?
 - RQ2 - How can educators support the development of a community of game makers?
 - RQ3 - How do game patterns support the development of coding practices with novices?
 - RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
 
-An ongoing question
 
 ## Appendices
 
@@ -147,3 +136,8 @@ An ongoing question
 - Evolution of research questions - as screen shot from Trello
 - Current coding structure.
 - Abstract and link to full book chapter - and draft chapters
+
+
+[^1]: https://glitch-game-makers-manual.glitch.me/
+[^2]: https://ggc-examples.glitch.me/
+[^3]: https://mickfuzz.github.io/makecode-platformer-101/
